NanoAODTools/plots/2018_QCDCR_debugging/RunII_plots/fJet_pt/10_26_2021/nohup.out
  File "plots/SR_2018/Jet_pt_ratio/10_13_2021/AH0l2bSRUL2018_partialUnblindv2.out", line 1
    Plotting start time: 2021-10-20 23:53:22.636449
                 ^
SyntaxError: invalid syntax
  File "plots/SR_2018/Jet_pt_ratio/10_13_2021/AH0l1fSRUL2018_partialUnblindv2.out", line 1
    Plotting start time: 2021-10-20 23:53:10.975982
                 ^
SyntaxError: invalid syntax
